force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reference_Profile_Form_Settings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Profile_Form_Settings__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c + &apos;ReferenceProfileSettingPage&apos;, &apos;Manage&apos;,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Profile Form Settings</label>
    <type>Text</type>
</CustomField>