force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reference_Profile_Section_Header__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Profile_Section_Header__c</fullName>
    <label>Reference Profile Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>