force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reference_Refresh_Update_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Refresh_Update_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</description>
    <inlineHelpText>Enables the slack message sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</inlineHelpText>
    <label>Profile Update Detail Slack</label>
    <type>Checkbox</type>
</CustomField>