force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reference_Update_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Update_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Chatter containing the Profile Update link sent to the designated Account /Reference /Profile Update Owner.</description>
    <inlineHelpText>Enables the Chatter containing the Profile Update link sent to the designated Account /Reference /Profile Update Owner.</inlineHelpText>
    <label>Profile Update Chatter</label>
    <type>Checkbox</type>
</CustomField>