force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__ReferenceEdge_Goals_Summary_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__ReferenceEdge_Goals_Summary_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReferenceEdge Goals Summary Email</label>
    <type>Checkbox</type>
</CustomField>