force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reminder_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reminder_to_Owner__c</fullName>
    <description>Number of days before deadline that a reminder will be sent to the owner</description>
    <inlineHelpText>The number of days before a Request deadline that a reminder will be sent to the Account/Reference Owner.</inlineHelpText>
    <label>Reminder to Owner</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>