force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Remove_Points_if_Use_will_not_occur__c.field-meta.xml
<CustomField>
    <fullName>refedge__Remove_Points_if_Use_will_not_occur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Points if ‘Use will not occur’</label>
    <type>Checkbox</type>
</CustomField>