force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_Approval_Decline_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Approval_Decline_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the email sent by an Account Owner or Reference Owner in response to an Account Request.</description>
    <inlineHelpText>Enables the email sent by an Account Owner or Reference Owner in response to an Account Request.</inlineHelpText>
    <label>Request Approval/Decline Email</label>
    <type>Checkbox</type>
</CustomField>