force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_Escalation_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Escalation_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Chatter notification sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</description>
    <inlineHelpText>Enables the Chatter notification sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</inlineHelpText>
    <label>Request Escalation Chatter</label>
    <type>Checkbox</type>
</CustomField>