force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_from_Leads__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_from_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>allow requests to be made from RefSearch when initiated from a Lead</inlineHelpText>
    <label>Request from Leads</label>
    <type>Checkbox</type>
</CustomField>