force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_Managed_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Managed_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</description>
    <inlineHelpText>Enables the slack message sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</inlineHelpText>
    <label>Request (Managed) Slack</label>
    <type>Checkbox</type>
</CustomField>