force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_No_Response_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_No_Response_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Chatter notification sent to the requester on the specified number of days before a Request deadline if the Account/Reference Owner has been unresponsive.</description>
    <inlineHelpText>Enables the Chatter notification sent to the requester on the specified number of days before a Request deadline if the Account/Reference Owner has been unresponsive.</inlineHelpText>
    <label>Request No Response Chatter</label>
    <type>Checkbox</type>
</CustomField>