force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_Peer2Peer_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Peer2Peer_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Account Request Chatter notification sent to the Account/Reference Owner.</description>
    <inlineHelpText>Enables the Account Request Chatter notification sent to the Account/Reference Owner.</inlineHelpText>
    <label>Request (Peer2Peer) Chatter</label>
    <type>Checkbox</type>
</CustomField>