force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Request reminder email sent to the Account/Reference Owner on the specified number of days before a Request deadline.</description>
    <inlineHelpText>Enables the Request reminder email sent to the Account/Reference Owner on the specified number of days before a Request deadline.</inlineHelpText>
    <label>Request Reminder Email</label>
    <type>Checkbox</type>
</CustomField>