force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reviewed_and_Ready_to_Launch__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reviewed_and_Ready_to_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual Launch Profile Update records created but requests are not sent until you check this box.</description>
    <inlineHelpText>Manual Launch Profile Update records created but requests are not sent until you check this box.</inlineHelpText>
    <label>Reviewed and Ready to Launch</label>
    <type>Checkbox</type>
</CustomField>