force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reward_Minder_Settings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reward_Minder_Settings__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;RewardSettings?customSettingId=&apos;+ Id+&apos;&amp;manage=true&apos; , &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward Minder Settings</label>
    <type>Text</type>
</CustomField>