force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__RM_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>refedge__RM_Permission_Sets__c</fullName>
    <label>RM Permission Sets</label>
    <type>TextArea</type>
</CustomField>