force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__RM_Profiles__c.field-meta.xml
<CustomField>
    <fullName>refedge__RM_Profiles__c</fullName>
    <label>RM Profiles</label>
    <type>TextArea</type>
</CustomField>