force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Roll_up_Attributes_to_All_Accounts__c.field-meta.xml
<CustomField>
    <fullName>refedge__Roll_up_Attributes_to_All_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attributes for Shared Contacts will roll up to ALL Accounts.</inlineHelpText>
    <label>Roll up Attributes to All Accounts</label>
    <type>Checkbox</type>
</CustomField>