force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Sales_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>refedge__Sales_Expiration_Days__c</fullName>
    <description>User Points Expiration Days</description>
    <label>User Points Expiration Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>