force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Sales_Reward_Point_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Sales_Reward_Point_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the Chatter notifying a user of points earned for a particular user activity. This Chatter notification is sent immediately upon earning the points.</inlineHelpText>
    <label>Immediate Chatter Notification</label>
    <type>Checkbox</type>
</CustomField>