force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Sales_Reward_Point_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Sales_Reward_Point_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message notifying a user of points earned for a particular user activity. This email is sent immediately upon earning the points.</description>
    <inlineHelpText>Enables the slack message notifying a user of points earned for a particular user activity. This email is sent immediately upon earning the points.</inlineHelpText>
    <label>Immediate Slack Notification</label>
    <type>Checkbox</type>
</CustomField>