force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Sales_Rewards_Notification_Frequency__c.field-meta.xml
<CustomField>
    <fullName>refedge__Sales_Rewards_Notification_Frequency__c</fullName>
    <description>This field is use to determine frequency on which we will send user points notification.</description>
    <inlineHelpText>Determines the frequency with which user reward notifications are sent to users.</inlineHelpText>
    <label>User Points Notification Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>