force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Shared_Contacts__c.field-meta.xml
<CustomField>
    <fullName>refedge__Shared_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, Shared Contacts will be enabled.</inlineHelpText>
    <label>Shared Contacts</label>
    <type>Checkbox</type>
</CustomField>