force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Show_Contacts_in_RefSearch__c.field-meta.xml
<CustomField>
    <fullName>refedge__Show_Contacts_in_RefSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Contacts in Ref Search</label>
    <type>Checkbox</type>
</CustomField>