force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Show_Featured_Content_First__c.field-meta.xml
<CustomField>
    <fullName>refedge__Show_Featured_Content_First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Featured Content First</label>
    <type>Checkbox</type>
</CustomField>