force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Show_Matching_Reference_Accounts_link__c.field-meta.xml
<CustomField>
    <fullName>refedge__Show_Matching_Reference_Accounts_link__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Displays Suggested Reference Accounts in the Recommended Reference Resources section on the Opportunity page. Also triggers &quot;Need References?&quot; prompt on the Opportunity page when the stage is changed to one of the designated Account stages</inlineHelpText>
    <label>Suggested Reference Accounts</label>
    <type>Checkbox</type>
</CustomField>