force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Show_Owner_in_Ref_Search__c.field-meta.xml
<CustomField>
    <fullName>refedge__Show_Owner_in_Ref_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Owner in Ref Search</label>
    <type>Checkbox</type>
</CustomField>