force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Slack_Enabled__c.field-meta.xml
<CustomField>
    <fullName>refedge__Slack_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to enable/disable Slack notifications.</inlineHelpText>
    <label>Slack Enabled</label>
    <type>Checkbox</type>
</CustomField>