force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Status_Update_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Status_Update_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the requester when the status changes on a Managed Request.</inlineHelpText>
    <label>Status Update Chatter</label>
    <type>Checkbox</type>
</CustomField>