force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Suggested_Reference_Content__c.field-meta.xml
<CustomField>
    <fullName>refedge__Suggested_Reference_Content__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Displays Suggested Reference Content in the Recommended Reference Resources section on the Opportunity page. Also triggers &quot;Need References?&quot; prompt on the Opportunity page when the stage is changed to one of the designated Content stages.</inlineHelpText>
    <label>Suggested Reference Content</label>
    <type>Checkbox</type>
</CustomField>