force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__User_Reward_Slack_Summary__c.field-meta.xml
<CustomField>
    <fullName>refedge__User_Reward_Slack_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message notifying a user of points earned for user activities. The User Points Notification Frequency setting determines how often this Email is sent.</description>
    <inlineHelpText>Enables the slack message notifying a user of points earned for user activities. The User Points Notification Frequency setting determines how often this Email is sent.</inlineHelpText>
    <label>User Points Summary Slack</label>
    <type>Checkbox</type>
</CustomField>