force-app/main/default/objects/refedge__Custom_Settings__c/recordTypes/refedge__New_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>refedge__New_Record_Type</fullName>
    <active>true</active>
    <label>New Record Type</label>
</RecordType>